Closed
Bug 1711587
Opened 4 years ago
Closed 4 years ago
Support multiple canvases affected by a WebGPU command encoder
Categories
(Core :: Graphics: WebGPU, defect)
Core
Graphics: WebGPU
Tracking
()
RESOLVED
FIXED
90 Branch
Tracking | Status | |
---|---|---|
firefox90 | --- | fixed |
People
(Reporter: kvark, Assigned: kvark)
References
Details
Attachments
(1 file)
Running http://austin-eng.com/webgpu-samples/samples/reversedZ currently doesn't produce anything on the right half of the screen, and we spew the error:
[Child 144654, Main Thread] WARNING: Command encoder touches more than one canvas: file /mnt/code/firefox/_webgpu/dom/webgpu/CommandEncoder.cpp:175
We need to fix that in order to run the "reversedZ" sample
Assignee | ||
Comment 1•4 years ago
|
||
Updated•4 years ago
|
Assignee: nobody → dmalyshau
Status: NEW → ASSIGNED
Pushed by dmalyshau@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/cd27ed3c33f6
Support multiple canvases in WebGPU command encoder r=jimb
Comment 3•4 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
status-firefox90:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•