Bug 1711587 - Support multiple canvases in WebGPU command encoder r=jimb

Differential Revision: https://phabricator.services.mozilla.com/D115305